Added upgrade shop. Added player mat.
CommandCard and UpgradeCard now extends Card.